univention-appcenter (9.0.8-4) unstable; urgency=medium

  * Bug #55610: add logrotate configuration for the listener module and a UCR variable to modify it

 -- Mika Westphal <westphal@univention.de>  Mon, 14 Aug 2023 14:37:25 +0200

univention-appcenter (9.0.8-3) unstable; urgency=medium

  * Bug #56201: replace python-notifier and adjust to new UMC module API

 -- Florian Best <best@univention.de>  Thu, 20 Jul 2023 08:39:21 +0200

univention-appcenter (9.0.8-2) unstable; urgency=medium

  * Bug #56047: Fix typo in output of "univention-app stall --help"

 -- Marius Meschter <marius.meschter@univention.de>  Wed, 19 Jul 2023 15:15:01 +0200

univention-appcenter (9.0.8-1) unstable; urgency=medium

  * Bug #43633: replace direct use of notifier.threads with UMC @threaded decorator

 -- Florian Best <best@univention.de>  Tue, 13 Jun 2023 13:23:50 +0200

univention-appcenter (9.0.7-10) unstable; urgency=medium

  * Bug #55632: Improved the Python 2.7 compatibility

 -- Mika Westphal <westphal@univention.de>  Fri, 26 May 2023 12:16:06 +0200

univention-appcenter (9.0.7-9) unstable; urgency=medium

  * Bug #56072: remove listener file when corresponding udm object cannot be found

 -- Christian Castens <castens@univention.de>  Tue, 23 May 2023 13:51:22 +0200

univention-appcenter (9.0.7-8) unstable; urgency=medium

  * Bug #55632: Migration of Python 2 leftovers and improved the Python 3 compatibility

 -- Mika Westphal <westphal@univention.de>  Thu, 04 May 2023 12:27:24 +0100

univention-appcenter (9.0.7-7) unstable; urgency=medium

  * Bug #56038: command execution in secondary container with univention-app shell is not supported

 -- Ivan Barbecho Delgado <delgado.extern@univention.de>  Thu, 04 May 2023 11:11:22 +0200

univention-appcenter (9.0.7-6) unstable; urgency=medium

  * Bug #55765: add custom settings for apps

 -- Felix Botner <botner@univention.de>  Tue, 25 Apr 2023 15:02:30 +0200

univention-appcenter (9.0.7-5) unstable; urgency=medium
