@@ -1,11 +1,0 @@
-product: ucs
-release: "5.0"
-version: [4]
-scope: ucs_5.0-0-errata5.0-4
-src: univention-appcenter
-fix: 9.0.8-4
-desc: |
- This update addresses the following issue:
- * The rotation of the listener module log file is now done by `logrotate`
-   and it can be configured via UCR.
-bug: [55610]
