@@ -9,11 +9,5 @@ print("/var/log/univention/%s.log {" % name)
 for setting in sorted(settings):
     print("\t%s" % settings[setting])
 print("}")
-
-settings = univention.lib.ucrLogrotate.getLogrotateConfig("app-attributes", configRegistry)
-print("/var/log/univention/listener_modules/app_attributes.log {")
-for setting in sorted(settings):
-    print("\t%s" % settings[setting])
-print("}")
 @!@
 
