@@ -1,8 +1,10 @@
 univention-appcenter (9.0.8-4) unstable; urgency=medium
 
-  * Bug #55610: add logrotate configuration for the listener module and a UCR variable to modify it
+  * Revert "Bug #55610: added appcenter logrotate configuration and a UCR variable"
 
- -- Mika Westphal <westphal@univention.de>  Mon, 14 Aug 2023 14:37:25 +0200
+    This reverts commit 38cb0823c9e9a07916f4f1f31ae4ec069d8495ff.
+
+ -- Mika Westphal <westphal@univention.de>  Tue, 22 Aug 2023 12:35:37 +0200
 
 univention-appcenter (9.0.8-3) unstable; urgency=medium
 
